--- a/index-barcode.html
+++ b/index-barcode.html
@@ -26,20 +26,24 @@ body{
 }
 .container{
   background:#fff;
-  border-radius:26px;
-  box-shadow:0 25px 60px rgba(0,0,0,.15);
+  border-radius:24px;
+  box-shadow:0 20px 50px rgba(0,0,0,.15);
   max-width:520px;
   width:100%;
-  padding:22px;
+  padding:20px;
   position:relative;
 }
+
+/* ===== TOPO ===== */
 .topbar{
   display:flex;
   justify-content:space-between;
   align-items:center;
+  margin-bottom:10px;
 }
-.topbar h2{
+.topbar h1{
   margin:0;
+  font-size:18px;
   font-weight:800;
 }
 .btn-logout{
@@ -53,13 +57,14 @@ body{
   cursor:pointer;
 }
 
+/* ===== FORM ===== */
 label{font-weight:700;margin-top:14px;display:block}
 input,select,textarea{
   width:100%;
   padding:14px;
   margin-top:6px;
   border:1px solid #cbd5e1;
-  border-radius:16px;
+  border-radius:14px;
   font-size:15px;
 }
 input[readonly]{background:#f1f5f9}
@@ -70,7 +75,7 @@ button{
   padding:14px;
   margin-top:12px;
   border:none;
-  border-radius:18px;
+  border-radius:16px;
   font-weight:800;
   font-size:15px;
   cursor:pointer;
@@ -79,24 +84,26 @@ button{
 .btn-primary{background:#2563eb;color:#fff}
 .btn-muted{background:#e5e7eb;color:#0f172a}
 
+/* overlay botão */
 button.loading{pointer-events:none}
 button.loading::after{
-  content:"Processando…";
+  content:"Enviando…";
   position:absolute;inset:0;
   background:rgba(0,0,0,.35);
   color:#fff;
   display:flex;
   align-items:center;
   justify-content:center;
-  border-radius:18px;
+  border-radius:16px;
 }
 
+/* ===== CAMERA ===== */
 #camera{
   display:none;
   width:100%;
   height:260px;
   background:#000;
-  border-radius:20px;
+  border-radius:18px;
   margin-top:12px;
   overflow:hidden;
 }
@@ -106,20 +113,23 @@ button.loading::after{
   margin-top:8px;
   text-align:center;
   font-weight:800;
+  font-size:14px;
   color:#2563eb;
 }
 
+/* ===== BADGE ===== */
 .badge{
   display:inline-block;
   background:#e0f2fe;
   color:#0369a1;
-  padding:8px 18px;
+  padding:8px 16px;
   border-radius:999px;
   font-weight:800;
   margin-top:10px;
   font-size:13px;
 }
 
+/* ===== HISTÓRICO ===== */
 table{
   width:100%;
   border-collapse:collapse;
@@ -132,6 +142,14 @@ th,td{
   text-align:center;
 }
 th{background:#f1f5f9}
+.btn-delete{
+  background:#fee2e2;
+  color:#991b1b;
+  border:none;
+  border-radius:10px;
+  padding:6px 10px;
+  font-weight:800;
+}
 
 .hidden{display:none}
 </style>
@@ -141,10 +159,11 @@ th{background:#f1f5f9}
 <div class="container">
 
 <div class="topbar">
-  <h2>📋 Requisição</h2>
-  <button class="btn-logout" onclick="logout()">Sair</button>
+  <h1>📋 Requisição</h1>
+  <button class="btn-logout hidden" id="btnLogout">Sair</button>
 </div>
 
+<!-- LOGIN -->
 <div id="loginArea">
   <label>Usuário</label>
   <input id="usuario">
@@ -153,6 +172,7 @@ th{background:#f1f5f9}
   <button class="btn-primary" id="btnLogin">Entrar</button>
 </div>
 
+<!-- APP -->
 <div id="appArea" class="hidden">
 
 <label>Setor</label>
@@ -163,7 +183,7 @@ th{background:#f1f5f9}
 </select>
 
 <label>Código de Barras</label>
-<input id="barcode">
+<input id="barcode" placeholder="Digite ou escaneie">
 
 <button class="btn-muted" id="btnManual">Buscar manual</button>
 <button class="btn-primary" id="btnOpenCamera">Abrir câmera</button>
@@ -185,9 +205,13 @@ th{background:#f1f5f9}
 
 <button class="btn-primary" id="btnEnviar">Enviar requisição</button>
 
-<h3>Histórico</h3>
+<h3 style="margin-top:20px">Histórico (7 dias)</h3>
 <table>
-<thead><tr><th>Produto</th><th>Qtd</th><th>Status</th></tr></thead>
+<thead>
+<tr>
+<th>Produto</th><th>Qtd</th><th>Status</th><th>Ação</th>
+</tr>
+</thead>
 <tbody id="historico"></tbody>
 </table>
 
@@ -200,32 +224,70 @@ th{background:#f1f5f9}
 </div>
 
 <script>
+/* ===== SUPABASE ===== */
 const sb=supabase.createClient(
  "https://mybsriouiwqsdufujbsc.supabase.co",
  "sb_publishable_AUyBEIVCAMUoXwDKUmlqSw_v8EY8rVN"
 );
 
+const normalizar=c=>"0"+String(c).replace(/\D/g,"");
+
+/* ===== ESTADO ===== */
+let usuarioLogado=JSON.parse(localStorage.getItem("usuario"));
+let unidadeAuto="",barcodeFinal="";
+let enviando=false;
+
+/* ===== SETOR PERSISTENTE ===== */
 const setorEl=document.getElementById("setor");
 setorEl.value=localStorage.getItem("setor")||setorEl.value;
 setorEl.onchange=()=>localStorage.setItem("setor",setorEl.value);
 
-const normalizar=c=>"0"+String(c).replace(/\D/g,"");
+/* ===== LOGIN ===== */
+btnLogin.onclick=async()=>{
+ const {data}=await sb.from("usuarios")
+ .select("*")
+ .eq("usuario",usuario.value)
+ .eq("senha",senha.value)
+ .eq("ativo",true)
+ .single();
+ if(!data) return;
+ localStorage.setItem("usuario",JSON.stringify(data.usuario));
+ init();
+};
 
+/* ===== INIT ===== */
+function init(){
+ loginArea.classList.add("hidden");
+ appArea.classList.remove("hidden");
+ btnLogout.classList.remove("hidden");
+ carregarHistorico();
+}
+if(usuarioLogado) init();
+
+/* ===== LOGOUT ===== */
+btnLogout.onclick=()=>{
+ localStorage.removeItem("usuario");
+ location.reload();
+};
+
+/* ===== BUSCAR PRODUTO (SEM ERRO VISUAL) ===== */
 async function buscarProduto(code){
- codigoLido.textContent=`Lendo código: ${code}`;
  barcodeFinal=code;
+ codigoLido.textContent=`Lendo código: ${code}`;
  try{
   const r=await fetch(`/api/buscar-barcode?barcode=${code}`);
   const j=await r.json();
   if(j?.produto){
    produto.value=j.produto.descricao;
-   unidadeBox.innerHTML=`<div class="badge">${j.produto.unidadeDeVenda}</div>`;
+   unidadeAuto=j.produto.unidadeDeVenda;
+   unidadeBox.innerHTML=`<div class="badge">${unidadeAuto}</div>`;
    beep.play();
    fecharCamera();
   }
  }catch{}
 }
 
+/* ===== CAMERA ===== */
 btnOpenCamera.onclick=()=>{
  camera.style.display="block";
  btnOpenCamera.classList.add("hidden");
@@ -244,37 +306,54 @@ function fecharCamera(){
  btnOpenCamera.classList.remove("hidden");
  btnCloseCamera.classList.add("hidden");
 }
-
 btnManual.onclick=()=>barcode.value&&buscarProduto(normalizar(barcode.value));
 
+/* ===== ENVIAR ===== */
 btnEnviar.onclick=async()=>{
- if(!produto.value||!quantidade.value)return;
+ if(enviando||!produto.value||!quantidade.value)return;
+ enviando=true;
  btnEnviar.classList.add("loading");
  await sb.from("requisicoes").insert({
-  usuario:JSON.parse(localStorage.getItem("usuario")),
+  usuario:usuarioLogado,
   setor:setorEl.value,
   produto:produto.value,
+  unidade:unidadeAuto,
   quantidade:quantidade.value,
   observacoes:observacoes.value,
   barcode:barcodeFinal,
   status:"PENDENTE"
  });
  btnEnviar.classList.remove("loading");
+ enviando=false;
  produto.value="";quantidade.value="";observacoes.value="";unidadeBox.innerHTML="";
+ carregarHistorico();
 };
 
-btnLogin.onclick=async()=>{
- const {data}=await sb.from("usuarios").select("*")
- .eq("usuario",usuario.value).eq("senha",senha.value).eq("ativo",true).single();
- if(!data)return;
- localStorage.setItem("usuario",JSON.stringify(data.usuario));
- loginArea.classList.add("hidden");
- appArea.classList.remove("hidden");
-};
+/* ===== HISTÓRICO ===== */
+async function carregarHistorico(){
+ historico.innerHTML="";
+ const seteDias=new Date(Date.now()-7*86400000).toISOString();
+ const {data}=await sb.from("requisicoes")
+ .select("*")
+ .eq("usuario",usuarioLogado)
+ .gte("created_at",seteDias)
+ .order("created_at",{ascending:false});
+ (data||[]).forEach(r=>{
+  const horas=(Date.now()-new Date(r.created_at))/3600000;
+  historico.insertAdjacentHTML("beforeend",`
+   <tr id="row-${r.id}">
+    <td>${r.produto}</td>
+    <td>${r.quantidade}</td>
+    <td>${r.status}</td>
+    <td>${horas<=1?`<button class="btn-delete" onclick="excluir('${r.id}')">Excluir</button>`:"-"}</td>
+   </tr>`);
+ });
+}
 
-function logout(){
- localStorage.removeItem("usuario");
- location.reload();
+/* ===== EXCLUIR ===== */
+async function excluir(id){
+ const {data}=await sb.rpc("excluir_requisicao",{p_id:id,p_usuario:usuarioLogado});
+ if(data) document.getElementById("row-"+id)?.remove();
 }
 </script>
 </body>
