--- a/index-barcode.html
+++ b/index-barcode.html
@@ -152,6 +152,16 @@ th{background:#f1f5f9}
 }
 
 .hidden{display:none}
+.btn-logout{
+  width:auto;              /* 🔥 ISSO resolve */
+  padding:6px 12px;        /* diminui altura */
+  margin:0;                /* remove espaçamento extra */
+  font-size:12px;
+  border-radius:999px;
+  background:#fee2e2;
+  color:#991b1b;
+}
+
 </style>
 </head>
 
@@ -160,7 +170,7 @@ th{background:#f1f5f9}
 
 <div class="topbar">
   <h1>📋 Requisição</h1>
-  <button class="btn-logout hidden" id="btnLogout">Sair</button>
+<button class="btn-logout" id="btnLogout">Sair</button>
 </div>
 
 <!-- LOGIN -->
